<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/dot_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="90dp"
        android:text="@string/dot"
        android:textSize="38sp"
        />

    <Button
        android:id="@+id/dash_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="90dp"
        android:text="@string/dash"
        android:textSize="40sp" />


    <Button
        android:id="@+id/letter_space"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="90dp"
        android:text="@string/letterspace"
        android:textDirection="firstStrongRtl"
        android:textSize="17sp" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="Clear"
        android:textSize="17sp" />

    <Button
        android:id="@+id/backspace"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/bspace"
        android:textSize="27sp" />

    <Button
        android:id="@+id/word_space"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="20dp"
        android:text="@string/wspace"
        android:textSize="17sp" />


    <EditText
        android:id="@+id/alphabets"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="-2dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_text_here"
        android:inputType="textMultiLine"
        android:textSize="25sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/morsecode"
        android:layout_width="410dp"
        android:layout_height="185dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-3dp"
        android:layout_marginBottom="159dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_morse_here"
        android:inputType="textMultiLine"
        android:textSize="25sp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/flash"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@+id/alphabets"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:text="@string/flash" />

    <Button
        android:id="@+id/vibrate"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@+id/alphabets"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:text="@string/vibrate" />

    <Button
        android:id="@+id/sound"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@+id/alphabets"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="150dp"
        android:text="@string/beep" />

</RelativeLayout>